--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
     .page_top_btn { position:fixed; right:15px; bottom:120px; z-index:999;
         color:#fff; background:#333;border-radius: 10px 0px 0px 10px; width:48px; height: 48px; border-radius:25px; 
         line-height: 48px; font-size:20px;border-radius: 10px; text-align:center; }    
-.page_pic {margin-left: 250px;}
+
  .page_wrap {  height: 100vh;
   width: 100vw;
   font-family: "Average Sans", sans-serif;
@@ -297,45 +297,47 @@ border-radius: 10px;position: relative;}
 
   .text_on_01 {display: none;}
   .m2_01:hover .text_on_01 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_01:hover {background-color: orange;background-image: url("image/html5-ok.pn");}
+  .m2_01:hover {background-color: #fff;background-image: url("image/html5-ok.pn");}
  .m2_01:hover .m2_01_text1 {display: none;transition: 0.5s;}
 
   .text_on_02 {display: none;}
   .m2_02:hover .text_on_02 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_02:hover {background-color: orange;background-image: url("image/css3-ok.pn");}
+  .m2_02:hover {background-color: #fff;background-image: url("image/css3-ok.pn");}
  .m2_02:hover .m2_02_text1 {display: none;transition: 0.5s;}
 
  .text_on_03 {display: none;}
   .m2_03:hover .text_on_03 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_03:hover {background-color: orange;background-image: url("image/js-ok.pn");}
+  .m2_03:hover {background-color: #fff;background-image: url("image/js-ok.pn");}
  .m2_03:hover .m2_03_text1 {display: none;transition: 0.5s;}
 
  .text_on_04 {display: none;}
   .m2_04:hover .text_on_04 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_04:hover {background-color: orange;background-image: url("image/ps-ok.pn");}
+  .m2_04:hover {background-color: #fff;background-image: url("image/ps-ok.pn");}
  .m2_04:hover .m2_04_text1 {display: none;transition: 0.5s;}
 
  .text_on_05 {display: none;}
   .m2_05:hover .text_on_05 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_05:hover {background-color: orange;background-image: url("image/ai-ok.pn");}
+  .m2_05:hover {background-color: #fff;background-image: url("image/ai-ok.pn");}
  .m2_05:hover .m2_05_text1 {display: none;transition: 0.5s;}
 
  .text_on_06 {display: none;}
   .m2_06:hover .text_on_06 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_06:hover {background-color: orange;}
+  .m2_06:hover {background-color: #fff;}
  .m2_06:hover .m2_06_text1 {display: none;transition: 0.5s;}
 
  .text_on_07 {display: none;}
   .m2_07:hover .text_on_07 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_07:hover {background-color: orange;}
+  .m2_07:hover {background-color: #fff;}
  .m2_07:hover .m2_07_text1 {display: none;transition: 0.5s;}
 
  .text_on_08 {display: none;}
   .m2_08:hover .text_on_08 {display: block;transition-duration: 1s;color: #333;border-radius: 10px 0px 0px 10px;}
-  .m2_08:hover {background-color: orange;}
+  .m2_08:hover {background-color: #fff;}
  .m2_08:hover .m2_08_text1 {display: none;transition: 0.5;}
  
 .mock_image a{color: #fff;}
+
+.lst li {margin-left: 50px;}
   </style>
 <div class="page" id="page1">
     <div class="page_wrap">
@@ -415,6 +417,7 @@ border-radius: 10px;position: relative;}
     </div>
     </div>
 </div>
+
 <div class="page" id="page2">
     <div class="page_wrap">
         <h2 class="page_title" style="text-align: center;font-size: 80px;">My SKILLS!</h2>
@@ -422,13 +425,13 @@ border-radius: 10px;position: relative;}
             <ul class="lst">
               <li>
                 <div class="page_m m2_01">
-                  <h1 class="m2_01_text1" style="font-size: 60px;text-align: center;">HOVER ME!</h1>
+                  <h1 class="m2_01_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
                 <div class="text_on_01">
-                <h3 style="text-decoration: underline;">HTML5</h3>
-                <p style="font-size: 20px;border-radius: 10px;">메인페이지 설계,서브페이지 설계,네비게이션 설계, 위젯 설계   </p>
-                <p style="font-size: 20px;border-radius: 10px;margin-top: 100px;">활용가능도 80%</p>
-             <div class="graph_01" style="border-radius: 10px;">
-                <div class="graph_01_2" style="border-radius: 10px 0px 0px 10px;">               
+                <h4 style="text-decoration: underline;">HTML5</h3>
+                <p style="font-size: 15px;border-radius: 10px;">메인페이지 설계<br> 서브페이지 설계 <br> 네비게이션 설계 <br> 위젯 설계   </p>
+                <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;">활용가능도 80%</p>
+             <div class="graph_01" style="border-radius: 10px; position: absolute;">
+                <div class="graph_01_2" style="border-radius: 10px 0px 0px 10px;position: absolute;">               
                 </div>
              </div>
                 </div>     
@@ -436,26 +439,27 @@ border-radius: 10px;position: relative;}
             </li>
             <li>
               <div class="page_m m2_02">
-                <h1 class="m2_02_text1" style="font-size: 60px;text-align: center;">HOVER ME!</h1>
+                <h1 class="m2_02_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
                 <div class="text_on_02">
-                <h3 style="text-decoration: underline;">CSS3</h3>
-                <p style="font-size: 20px;border-radius: 10px;">모바일/태블릿/데스크탑 레이아웃,
+                <h4 style="text-decoration: underline;">CSS3</h4>
+                <p style="font-size: 15px;border-radius: 10px;">모바일/태블릿/데스크탑 레이아웃,
                    기업형 레이아웃, 브랜드 레이아웃,
                     기타 각 종 레이아웃 구현, 
                     위젯 구현, 각 종 메인 및 서브페이지 구현 등 <br></p>
-                    <p style="font-size: 20px;border-radius: 10px;margin-top: 20px;">활용가능도 80%</p>
+                    <p style="font-size: 15px;border-radius: 10px;margin-top: 20px;">활용가능도 80%</p>
                     <div class="graph_02">
+                
                        <div class="graph_02_2">
                 </div>     
               </div>
           </li>
           <li>
             <div class="page_m m2_03">
-              <h1 class="m2_03_text1" style="font-size: 60px;text-align: center;">HOVER ME!</h1>
+              <h1 class="m2_03_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
               <div class="text_on_03">
-              <h3 style="text-decoration: underline;">javascript+ <br> jQuery</h3>
-              <p style="font-size: 20px;border-radius: 10px;">문서 탐색 및 선택, 이벤트 처리, 효과 적용, 각 종 위젯 제작 및 구현 등</p>
-              <p style="font-size: 20px;border-radius: 10px;margin-top: 50px;">활용가능도 50%</p>
+              <h4 style="text-decoration: underline;">javascript+ <br> jQuery</h4>
+              <p style="font-size: 15px;border-radius: 10px;">문서 탐색 및 선택, 이벤트 처리, 효과 적용, 각 종 위젯 제작 및 구현 등</p>
+              <p style="font-size: 15px;border-radius: 10px;margin-top: 50px;">활용가능도 50%</p>
               <div class="graph_03">
                  <div class="graph_03_2">
               </div>     
@@ -463,11 +467,11 @@ border-radius: 10px;position: relative;}
         </li>
         <li>
           <div class="page_m m2_04">
-            <h1 class="m2_04_text1" style="font-size: 60px;text-align: center;">HOVER ME!</h1> 
+            <h1 class="m2_04_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
             <div class="text_on_04">
-            <h3 style="text-decoration: underline;">Photo shop</h3>
-            <p style="font-size: 20px;border-radius: 10px;">이미지 편집, 시안 제작, 패턴 제작, 배너 제작, 위젯 요소 제작 등</p>
-            <p style="font-size: 20px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
+            <h4 style="text-decoration: underline;">Photo shop</h4>
+            <p style="font-size: 15px;border-radius: 10px;">이미지 편집, 시안 제작, 패턴 제작, 배너 제작, 위젯 요소 제작 등</p>
+            <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
             <div class="graph_04">
                <div class="graph_04_2">
             </div>     
@@ -475,11 +479,11 @@ border-radius: 10px;position: relative;}
       </li>
       <li>
         <div class="page_m m2_05">
-          <h1 class="m2_05_text1" style="font-size: 60px;text-align: center;">HOVER ME!</h1> 
+          <h1 class="m2_05_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
           <div class="text_on_05">
-          <h3 style="text-decoration: underline;">illustrator</h3>
-          <p style="font-size: 20px;border-radius: 10px;">로고, 심볼, 앰블럼, 패턴, 캐릭터, 시안 레이아웃 제작, 메타포 제작 등</p>
-          <p style="font-size: 20px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
+          <h4 style="text-decoration: underline;">illustrator</h4>
+          <p style="font-size: 15px;border-radius: 10px;">로고, 심볼, 앰블럼, 패턴, 캐릭터, 시안 레이아웃 제작, 메타포 제작 등</p>
+          <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
           <div class="graph_05">
              <div class="graph_05_2">
           </div>     
@@ -487,11 +491,11 @@ border-radius: 10px;position: relative;}
     </li>
     <li>
       <div class="page_m m2_06">
-        <h1 class="m2_06_text1" style="font-size: 50px;text-align: center;">HOVER ME!</h1> 
+        <h1 class="m2_06_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
         <div class="text_on_06">
-        <h3 style="text-decoration: underline;">기타프리프로세서</h3>
-        <p style="font-size: 20px;border-radius: 10px;">markdown, emmet, scss</p>
-        <p style="font-size: 20px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
+        <h6 style="text-decoration: underline;">기타프리프로세서</h6>
+        <p style="font-size: 15px;border-radius: 10px;">markdown, emmet, scss</p>
+        <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;">활용가능도 70%</p>
         <div class="graph_06">
            <div class="graph_06_2">
         </div>     
@@ -499,11 +503,11 @@ border-radius: 10px;position: relative;}
   </li>
   <li>
     <div class="page_m m2_07">
-      <h1 class="m2_07_text1" style="font-size: 50px;text-align: center;">HOVER ME!</h1>
+      <h1 class="m2_07_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
       <div class="text_on_07">
-      <h3 style="text-decoration: underline;">CSS <br> 프레임 워크</h3>
-      <p style="font-size: 20px;border-radius: 10px;">bootstrap, foundation, pure, bulma 등</p>
-      <p style="font-size: 20px;border-radius: 10px;margin-top: 70px;">활용가능도 70%</p>
+      <h6 style="text-decoration: underline;">CSS 프레임 워크</h6>
+      <p style="font-size: 15px;border-radius: 10px;">bootstrap, foundation, pure, bulma 등</p>
+      <p style="font-size: 15px;border-radius: 10px;margin-top: 70px;">활용가능도 70%</p>
       <div class="graph_07">
          <div class="graph_07_2">
       </div>     
@@ -511,12 +515,12 @@ border-radius: 10px;position: relative;}
 </li>
 <li>
   <div class="page_m m2_08">
-    <h1 class="m2_08_text1" style="font-size: 50px;text-align: center;">HOVER ME!</h1>
+    <h1 class="m2_08_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
     <div class="text_on_08">
-    <h3 style="text-decoration: underline;">기타 툴</h3>
-    <p style="font-size: 20px;border-radius: 10px;">프로토타입툴(oven),공유 및 버전관리툴(깃허브,트렐로,드롭박스),서버(아파치),
+    <h6 style="text-decoration: underline;">기타 툴</h6>
+    <p style="font-size: 15px;border-radius: 10px;">프로토타입툴(oven),공유 및 버전관리툴(깃허브,트렐로,드롭박스),서버(아파치),
       서버용언어(php)DB(my-sql)</p>
-      <p style="font-size: 20px;border-radius: 10px;margin-top: 45px;">활용가능도 70%</p>
+      <p style="font-size: 15px;border-radius: 10px;margin-top: 45px;">활용가능도 70%</p>
       <div class="graph_08">
          <div class="graph_08_2">
     </div>     
@@ -714,12 +718,12 @@ border-radius: 10px;position: relative;}
 .mock_image li a  { text-align:center;
 box-sizing:border-box; display:block; clear:both;
 margin:0 auto;}
-.mock_image li a:before { clear:both; content:""; display:block; height:5px; background:orange; transition:0.5s; width:0; margin:0 auto; }
+.mock_image li a:before { clear:both; content:""; display:block; height:5px; background:#fff; transition:0.5s; width:0; margin:0 auto; }
 
 
 .mock_image li a:hover::before { background:#1c87dc;
 width:200px; }
-.mock_image li a:after { clear:both; content:""; display:block; height:5px; background:orange; transition:0.5s; width:0; margin:0px auto;  }
+.mock_image li a:after { clear:both; content:""; display:block; height:5px; background:#fff; transition:0.5s; width:0; margin:0px auto;  }
 .mock_image li a:hover::after { background:#1c87dc; width:200px; }
 
 
