--- a/index.html
+++ b/index.html
@@ -579,15 +579,15 @@ border-radius: 10px;position: relative;}
                       <li><div id="ban_fade1" style="width:200px;height:200px;display:none;background-color:black;
                       background-image: url(image/ban01.PNG);">
                       <a href="https://yejun7.github.io/ban01/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >대전동산고등학교</p></a></div></li>
-                      <li><div id="ban_fade2" style="width:200px;height:200px;display:none;background-color:green;background-image: url(image/ban7.PNG);">
+                      <li><div id="ban_fade2" style="width:200px;height:200px;display:none;background-color:green;background-image: url(image/ban7.png);">
                         <a href="https://yejun7.github.io/ban7/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >식품의약품안전처</p></a></div></li>
-                      <li><div id="ban_fade3" style="width:200px;height:200px;display:none;background-color:green;background-image: url(image/ban04.PNG);">
+                      <li><div id="ban_fade3" style="width:200px;height:200px;display:none;background-color:green;background-image: url(image/ban04.png);">
                         <a href="https://yejun7.github.io/ban04/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >통계청</p></a></div></li>
-                      <li><div id="ban_fade4" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban5.PNG);">
+                      <li><div id="ban_fade4" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban5.png);">
                         <a href="https://yejun7.github.io/ban5/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >대전중구보건소</p></a></div></li>
-                      <li><div id="ban_fade5" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban6.PNG);">
+                      <li><div id="ban_fade5" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban6.png);">
                         <a href="https://yejun7.github.io/ban6/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >Dole</p></a></div></li>
-                        <li><div id="ban_fade6" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban02.PNG);">
+                        <li><div id="ban_fade6" style="width:200px;height:200px;display:none;background-color:red;background-image: url(image/ban02.png);">
                           <a href="https://yejun7.github.io/ban02/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >위너브라더스</p></a></div></li>
                     </ul>
                    </div>
