--- a/index.html
+++ b/index.html
@@ -557,7 +557,7 @@ border-radius: 10px;position: relative;}
                     <div class="mo_fadein_02">
                       <ul>
                       <li><div id="mo_fade1" style="width:200px;height:200px;display:none;background-color:black;
-                       background-image:url(image/b12.PNG);">
+                       background-image:url(image/b12.png);">
                        <a href="https://yejun7.github.io/b12/" target="_blank">
                         <p style="margin-top: 200px; font-size: 15px;" >The national gallery</p>
                       </a>
@@ -577,7 +577,7 @@ border-radius: 10px;position: relative;}
                     <div class="ban_fadein_03">
                       <ul>
                       <li><div id="ban_fade1" style="width:200px;height:200px;display:none;background-color:black;
-                      background-image: url(image/ban01.PNG);">
+                      background-image: url(image/ban01.png);">
                       <a href="https://yejun7.github.io/ban01/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >대전동산고등학교</p></a></div></li>
                       <li><div id="ban_fade2" style="width:200px;height:200px;display:none;background-color:green;background-image: url(image/ban7.png);">
                         <a href="https://yejun7.github.io/ban7/" target="_blank"><p style="margin-top:200px; font-size: 15px;" >식품의약품안전처</p></a></div></li>
