--- a/index.html
+++ b/index.html
@@ -874,8 +874,9 @@ width:200px; }
     <div class="ft_wrap">  2020 All copyright © LEE YEJUN(alpstiger)</div>
     <img src="/image/my/self.jpg" alt="" style="height: 150px;">
 </footer>
-<div class="page_top_btn">
+<!-- 제이쿼리 기동시키고 오픈예정
+  <div class="page_top_btn">
     <span class="txt">↑</span>
-</div>
+</div>  -->
 </body>
 </html>
