--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ border-radius: 10px;position: relative;}
                   <h1 class="m2_01_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
                 <div class="text_on_01">
                 <h4 style="text-decoration: underline;">HTML5</h3>
-                <p style="font-size: 15px;border-radius: 10px;">메인페이지 설계<br> 서브페이지 설계 <br> 네비게이션 설계 <br> 위젯 설계   </p>
+                <p style="font-size: 15px;border-radius: 10px;">메인페이지 설계 가능<br> 서브페이지 설계 가능<br> 네비게이션 설계 가능<br> 위젯 설계 가능  </p>
                 <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;opacity: 0.7;">활용가능도 80%</p>
              <div class="graph_01" style="border-radius: 10px; position: absolute;">
                 <div class="graph_01_2" style="border-radius: 10px 0px 0px 10px;position: absolute;">               
@@ -474,7 +474,7 @@ border-radius: 10px;position: relative;}
                 <p style="font-size: 15px;border-radius: 10px;">모바일/태블릿/데스크탑 <br> 레이아웃 <br>
                    기업형 레이아웃 <br> 브랜드 레이아웃 <br>
                     기타 각 종 레이아웃 구현 <br> 
-                    위젯 구현, 각 종 메인 및 <br> 서브페이지 구현 등 <br></p>
+                    위젯 구현, 각 종 메인 및 <br> 서브페이지 구현 등 가능 <br></p>
                     <p style="font-size: 15px;border-radius: 10px;position: relative; margin-top: 28px;opacity: 0.7;">활용가능도 80%</p>
                     <div class="graph_02">
                 
@@ -487,7 +487,7 @@ border-radius: 10px;position: relative;}
               <h1 class="m2_03_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
               <div class="text_on_03">
               <h4 style="text-decoration: underline;">javascript+ <br> jQuery</h4>
-              <p style="font-size: 15px;border-radius: 10px;">문서 탐색 및 <br> 선택 이벤트 처리 <br> 효과 적용 <br> 각 종 위젯 제작 및 구현 등</p>
+              <p style="font-size: 15px;border-radius: 10px;">문서 탐색 및 <br> 선택 이벤트 처리 <br> 효과 적용 <br> 각 종 위젯 제작 및 구현 등 가능</p>
               <p style="font-size: 15px;border-radius: 10px;margin-top: 50px;opacity: 0.7;">활용가능도 50%</p>
               <div class="graph_03">
                  <div class="graph_03_2">
@@ -499,7 +499,7 @@ border-radius: 10px;position: relative;}
             <h1 class="m2_04_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
             <div class="text_on_04">
             <h4 style="text-decoration: underline;">Photo shop</h4>
-            <p style="font-size: 15px;border-radius: 10px;">이미지 편집, 시안 제작 <br>  패턴 제작 <br> 배너 제작 <br> 위젯 요소 제작 등</p>
+            <p style="font-size: 15px;border-radius: 10px;">이미지 편집, 시안 제작 <br>  패턴 제작 <br> 배너 제작 <br> 위젯 요소 제작 등 가능</p>
             <p style="font-size: 15px;border-radius: 10px;margin-top: 100px;opacity: 0.7;">활용가능도 70%</p>
             <div class="graph_04">
                <div class="graph_04_2">
@@ -511,7 +511,7 @@ border-radius: 10px;position: relative;}
           <h1 class="m2_05_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
           <div class="text_on_05">
           <h4 style="text-decoration: underline;">illustrator</h4>
-          <p style="font-size: 15px;border-radius: 10px;">로고, 심볼 <br> 앰블럼, 패턴 <br> 캐릭터 <br> 시안 레이아웃 제작 <br> 메타포 제작 등</p>
+          <p style="font-size: 15px;border-radius: 10px;">로고, 심볼 <br> 앰블럼, 패턴 <br> 캐릭터 <br> 시안 레이아웃 제작 <br> 메타포 제작 등 가능</p>
           <p style="font-size: 15px;border-radius: 10px;position: relative;margin-top: 75px;opacity: 0.7;">활용가능도 70%</p>
           <div class="graph_05">
              <div class="graph_05_2">
@@ -523,7 +523,7 @@ border-radius: 10px;position: relative;}
         <h1 class="m2_06_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1> 
         <div class="text_on_06">
         <h6 style="text-decoration: underline;">기타프리프로세서</h6>
-        <p style="font-size: 20px;border-radius: 10px;">markdown <br> emmet <br> scss</p>
+        <p style="font-size: 20px;border-radius: 10px;">markdown <br> emmet <br> scss 사용가능</p>
         <p style="font-size: 15px;border-radius: 10px;margin-top: 116px;opacity: 0.7;">활용가능도 70%</p>
         <div class="graph_06">
            <div class="graph_06_2">
@@ -535,7 +535,7 @@ border-radius: 10px;position: relative;}
       <h1 class="m2_07_text1" style="font-size: 30px;text-align: center;">HOVER ME!</h1>
       <div class="text_on_07">
       <h6 style="text-decoration: underline;">CSS 프레임 워크</h6>
-      <p style="font-size: 20px;border-radius: 10px;">bootstrap <br> foundation <br> pure <br> bulma 등</p>
+      <p style="font-size: 20px;border-radius: 10px;">bootstrap <br> foundation <br> pure <br> bulma 등 사용가능</p>
       <p style="font-size: 15px;border-radius: 10px;margin-top: 85px;opacity: 0.7;">활용가능도 70%</p>
       <div class="graph_07">
          <div class="graph_07_2">
@@ -548,8 +548,8 @@ border-radius: 10px;position: relative;}
     <div class="text_on_08">
     <h6 style="text-decoration: underline;">기타 툴</h6>
     <p style="font-size: 15px;border-radius: 10px;">프로토타입툴(oven) <br> 공유 및 버전관리툴 <br> (깃허브,트렐로,드롭박스) <br> 서버(아파치) <br>
-      서버용언어(php)DB(my-sql)</p>
-      <p style="font-size: 15px;border-radius: 10px;margin-top: 92px;opacity: 0.7;">활용가능도 70%</p>
+      서버용언어(php)DB(my-sql) <br> 사용가능 </p>
+      <p style="font-size: 15px;border-radius: 10px;margin-top: 67px;opacity: 0.7;">활용가능도 70%</p>
       <div class="graph_08">
          <div class="graph_08_2">
     </div>     
