--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -170,11 +170,11 @@ border-top:2px solid #333; display:none;  }
                     </textarea>
                     <div class="nt_wrap">
                         <label class="container">동의함
-                            <input type="radio" checked="checked" name="radio">
+                            <input type="radio" checked="checked" name="radio1">
                             <span class="checkmark"></span>
                           </label>
                           <label class="container">동의안함
-                            <input type="radio" name="radio" checked>
+                            <input type="radio" name="radio1" checked>
                             <span class="checkmark"></span>
                           </label>
                         
@@ -206,11 +206,11 @@ border-top:2px solid #333; display:none;  }
                             </div>
                                   <div class="nt_wrap3">
                         <label class="container">동의함
-                            <input type="radio" checked="checked" name="radio">
+                            <input type="radio"  name="radio3">
                             <span class="checkmark"></span>
                           </label>
                           <label class="container">동의안함
-                            <input type="radio" name="radio" checked>
+                            <input type="radio" name="radio3"  checked>
                             <span class="checkmark"></span>
                           </label>
                         
