--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -66,16 +66,16 @@ border-top:2px solid #333; display:none;  }
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dp1">업무안내</a>
+                                <a href="menu2-1.html" class="dp1">업무안내</a>
                                 <ul class="sub">
                                     <li><a href="menu2-1.html">R&D</a></li>
                                     <li><a href="#">ICT</a></li>
                                 </ul>
                             </li>
                             <li>
-                                <a href="#" class="dp1">정보공개</a>
+                                <a href="menu3-1.html" class="dp1">정보공개</a>
                                 <ul class="sub">
-                                    <li><a href="#">정보목록</a></li>
+                                    <li><a href="menu3-1.html">정보목록</a></li>
                                     <li><a href="#">공공데이터개방</a></li>
                                     <li><a href="#">정보공개안내제도</a></li>
                                 </ul>
