--- a/b2/menu2-1.html
+++ b/b2/menu2-1.html
@@ -64,43 +64,38 @@ td.col7 {height: 30px;}
                <div class="line2"></div>
         <a href="index.html" class="logo"><img src="./image/main/logo.PNG" alt=""></a>
         <nav class="gnb">
-                       <ul>
-                           <li> 
-                               <a href="menu1-1.html" class="dp1">소통광장</a>
-                               <ul class="sub">
-                                   <li><a href="menu1-1.html">민원신고</a></li>
-                                   <li><a href="menu1-2.html">민원확인</a></li>
-                                   <li><a href="#">국민제안</a></li>
-                               </ul>
-                           </li>
-                           <li>
-                               <a href="#" class="dp1">업무안내</a>
-                               <ul class="sub">
-                                   <li onclick="alert1()" ><a href="#">R&D</a></li>
-                                   <script>
-                                    function alert1() {
-                                      alert("R&D는 현재 보고 있는 페이지 입니다.");
-                                    }
-                                    </script>
-                                   <li><a href="#">ICT</a></li>
-                               </ul>
-                           </li>
-                           <li>
-                               <a href="#" class="dp1">정보공개</a>
-                               <ul class="sub">
-                                   <li><a href="menu3-1.html">정보목록</a></li>
-                                   <li><a href="#">공공데이터개방</a></li>
-                                   <li><a href="#">정보공개안내제도</a></li>
-                               </ul>
-                           </li>
-                           <li>
-                               <a href="#" class="dp1">기관소개</a>
-                               <ul class="sub">
-                                   <li><a href="#">업무계획예산</a></li>
-                                   <li><a href="#">찾아오시는길</a></li>
-                                   <li><a href="#">조직도/직원안내</a></li>
-                               </ul>
-                           </li>
+            <ul>
+                <li>
+                    <a href="menu1-1.html" class="dp1">소통광장</a>
+                    <ul class="sub">
+                        <li><a href="menu1-1.html">민원신고</a></li>
+                        <li><a href="#">민원확인</a></li>
+                        <li><a href="#">국민제안</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="menu2-1.html" class="dp1">업무안내</a>
+                    <ul class="sub">
+                        <li><a href="menu2-1.html">R&D</a></li>
+                        <li><a href="#">ICT</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="menu3-1.html" class="dp1">정보공개</a>
+                    <ul class="sub">
+                        <li><a href="menu3-1.html">정보목록</a></li>
+                        <li><a href="#">공공데이터개방</a></li>
+                        <li><a href="#">정보공개안내제도</a></li>
+                    </ul>
+                </li>
+                <li>
+                    <a href="menu4-1.html" class="dp1">기관소개</a>
+                    <ul class="sub">
+                        <li><a href="#">업무계획예산</a></li>
+                        <li><a href="menu4-1.html">찾아오시는길</a></li>
+                        <li><a href="#">조직도/직원안내</a></li>
+                    </ul>
+                </li>
                               
                        </ul>
                    </nav>
