--- a/b2/index.html
+++ b/b2/index.html
@@ -220,21 +220,21 @@ border-top:2px solid #333; display:none;  }
                         <a href="menu1-1.html" class="dp1">소통광장</a>
                         <ul class="sub">
                             <li><a href="menu1-1.html">민원신고</a></li>
-                            <li><a href="menu1-2.html">민원확인</a></li>
+                            <li><a href="#">민원확인</a></li>
                             <li><a href="#">국민제안</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#" class="dp1">업무안내</a>
+                        <a href="menu2-1.html" class="dp1">업무안내</a>
                         <ul class="sub">
                             <li><a href="menu2-1.html">R&D</a></li>
                             <li><a href="#">ICT</a></li>
                         </ul>
                     </li>
                     <li>
-                        <a href="#" class="dp1">정보공개</a>
+                        <a href="menu3-1.html" class="dp1">정보공개</a>
                         <ul class="sub">
-                            <li><a href="#">정보목록</a></li>
+                            <li><a href="menu3-1.html">정보목록</a></li>
                             <li><a href="#">공공데이터개방</a></li>
                             <li><a href="#">정보공개안내제도</a></li>
                         </ul>
