--- a/ban5/index.html
+++ b/ban5/index.html
@@ -33,6 +33,10 @@
     .hd { clear:both; position:relative; border-bottom:3px solid #f1f1f1; display:none; }
     .hd.mo { height:60px; }
     .hd.desk { height: 100px; }
+
+    .logo img {width: 150px;height: 100px;}
+    .item_lst img{width: 234px;height: 235px;}
+
     .home { display:block; width: 48px; height: 48px; line-height: 48px; text-align:center; 
     position:absolute; top:0.25rem; left:1rem; color:#333; }
     .lst { display:block; width: 48px; height: 48px; line-height:48px; text-align:center; 
@@ -81,6 +85,8 @@
         #menu_call ~ .wrap { width:320px; margin: 0 auto; }
         .item_tit { font-size:18px; color:#000; }
         .item_com { font-size:14px;  color:#000; }
+        .item_lst li {width: 90%;height: auto;}
+        .item_lst li img {width: 100%;height: auto;}
     }
     @media screen and (min-width:768px) and (max-width:959px) {
         .desk { display:block; }
@@ -122,8 +128,7 @@
             @media print and (min-resolution:300dpi) { }
         color:지정한 비트수 만큼의 컬러를 지원하는 장치인 경우
             @media screen and (min-color:4) { } */
-            .logo img {width: 150px;height: 100px;}
-            .item_lst img{width: 234px;height: 235px;}
+          
            
     </style>
 </head>
