--- a/b2/menu4-1.html
+++ b/b2/menu4-1.html
@@ -134,7 +134,7 @@ color:#fff; border-radius:10px; float:left; margin-left: 25px; margin-top: 18px;
                                 <table class="subTable1">
                                     <tr>
                                         <th class="col2">주소안내</th>
-                                        <td class="col10">주소 : (30121) 세종특별자치시 가름로 194(어진동)
+                                        <td class="col10">(30121) 세종특별자치시 가름로 194(어진동)
                                             </td>
                                     </tr>
                                     <tr>
