--- a/b2/menu4-1.html
+++ b/b2/menu4-1.html
@@ -43,7 +43,7 @@
                     ::-webkit-scrollbar { display:none; }    
                     ::-o-scrollbar { display:none; } 
                     ::-moz-scrollbar { display:none; }    
-.subTable1 { width: 100%; border-top:2px solid #4271e5; margin-top: 30px; }
+.subTable1 { width: 100%; border-top:1px solid #ccc; margin-top: 30px; }
 .subTable1 th, .subTable1 td { line-height:4; font-size:14px; 
 border-bottom:1px solid #ccc; }
 .subTable1 th { background:#fff; }
@@ -153,21 +153,25 @@ color:#fff; border-radius:10px; float:left; margin-left: 25px; margin-top: 18px;
                                     <tr>
                                         <th class="col2">
                                             <p>기차</p>
-                                            <p>&nbsp;</p>
+                                          
                                         </th>
                                         <td class="col10">
-                                            <p><span class="tdItem data1">대전역</span>(예상 소요시간 : 약 85분) 대전역 BRT 버스정류장 승차(1001번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 702m 이동</p>
-                                            <p><span class="tdItem data2">오송역</span>(예상 소요시간 : 약 45분)오송역 BRT 버스정류장 승차(1001번, 990번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 754m 이동</p>
+                                            <p><span class="tdItem data1">대전역</span>(예상 소요시간 : 약 85분) 
+                                                대전역 BRT 버스정류장 승차(1001번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 702m 이동</p>
+                                            <p><span class="tdItem data2">오송역</span>(예상 소요시간 : 약 45분)
+                                                오송역 BRT 버스정류장 승차(1001번, 990번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 754m 이동</p>
                                         </td>
                                     </tr>
                                     <tr>
                                         <th class="col2">
                                             <p>버스</p>
-                                            <p>&nbsp;</p>
+                                            
                                         </th>
                                         <td class="col10">
-                                            <p><span class="tdItem data3">세종터미널 정류장 승차</span>(900번, 990번, 1001번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 754m 이동</p>
-                                            <p style="margin-top: 10px;margin-bottom: 10px;"><span class="tdItem data4">세종터미널 정류장 승차</span>(1000번, 430번) → 다정동(성남고등학교) 정류 하차→ 청사까지 약 820m 이동</p>
+                                            <p><span class="tdItem data3">세종터미널 정류장 <br> 승차</span>
+                                                (900번, 990번, 1001번)→ 정부세종청사남측 정류장 하차→ 청사까지 약 754m 이동</p>
+                                          <p>  (1000번, 430번) → 다정동(성남고등학교) 정류 하차→
+                                                 청사까지 약 820m 이동</p>
                                         </td>
                                     </tr>
                                 </table>
