--- a/b2/menu1-1.html
+++ b/b2/menu1-1.html
@@ -108,6 +108,14 @@ border-top:2px solid #333; display:none;  }
                          
                 </header>
 
+
+                   <div class="navigation" style="top: 120px;position: relative;">
+        <span class="nav_01"><a href="index.html">HOME</a></span>
+        <span class="nav_02"><a href="menu2-1.html">업무안내</a></span>
+        <span class="nav_03" id="nav_03"><a href="menu2-1.html">R&D</a></span>
+         <hr style="color: #4271e5; margin-top: 10px;">
+</div>
+
                 <content class="min">
                         <h1>신청서 작성</h1>
                     <textarea name="" id="area1" cols="150" rows="50" style="margin-left:295px" >
