--- a/b2/index.html
+++ b/b2/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <title>과학기술정보통신부</title>
-	<link rel="shortcut icon" href="image/main/pavi16x16.png">
+	<link rel="shortcut icon" href="image/main/pavi.png">
     <link rel="apple-touch-icon-precomposed" href="image/pavi180x180.png">
     <link rel="stylesheet" href="main.css">
     <script src="http://code.jquery.com/jquery.js"></script>
