--- a/ban04/index.html
+++ b/ban04/index.html
@@ -6,7 +6,7 @@
 <title>통계청</title>
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/default.css">
-<link rel="shortcut icon" href="images/favicon/favicon.ico">
+<link rel="shortcut icon" href="image/main/pavi.png">
 <link rel="apple-touch-icon-precomposed" href="images/icon/flat-design-touch.png">
 <script src="js/jquery.min.js"></script>
 <script src="js/flat.min.js"></script>
@@ -37,12 +37,11 @@
 		</header>
 		<section class="slider_section">
 			<li class="gal">
-
-		
-            
 			</li>
 			<div class=""></div>
-			<span class="prev_btn">이전 버튼</span><span class="next_btn">다음 버튼</span>
+		 <!-- 슬라이드 구동 후 화면표시 예정	
+			<span class="prev_btn">이전 버튼
+			</span><span class="next_btn">다음 버튼</span> -->
 		</section>
 		<section class="latest_post_section">
 			<h2 class="title">채용정보</h2>
