--- a/b2/index.html
+++ b/b2/index.html
@@ -130,7 +130,7 @@ text-align:center; text-shadow:2px 2px 2px #0066ad, -2px -2px 2px #0066ad; line-
  .pub_wrap img:hover {transform: scale(1.02, 1.02);box-shadow: 2px 2px 2px; transition:0.7s;}
           
 /*라디오탭*/
-con_box li.item { float:left; }
+
 .con_box li.nt { width:450px; }
 .rdo { display:none; }
 .con_box li.ban { 
@@ -178,19 +178,6 @@ border-top:2px solid #333; display:none;  }
 #ra2:checked ~ #gallery {
     display:block;
 }
-/*동그랑 아이콘 6개*/
-/*
-.menu_icon li:hover {animation: ani1 linear 1s;}
-@keyframes ani1 {
-    from{transform:rotateY(0deg) ;}
-    to {transform: rotateY(360deg);} */
-    
-
-
- 
-
-
-
 
 /* footer */
 .ft {width: 1920px;height: 70px;position: relative;top: 10px;text-align:center; top:x;}
@@ -257,11 +244,11 @@ border-top:2px solid #333; display:none;  }
             </div>
             <div class="top_link">
                     <ul class="5set">
-                        <li><a href="https://www.facebook.com/withmsit"><img src="image/main/face.png" alt=""></a></li>
-                        <li><a href="https://blog.naver.com/with_msip"><img src="image/main/set2.png" alt=""></a></li>
-                        <li><a href="https://www.youtube.com/c/withmsit"><img src="image/main/set3.png" alt=""></a></li>
-                        <li><a href="https://twitter.com/withmsit/"><img src="image/main/set4.png" alt=""></a></li>
-                        <li><a href="https://www.instagram.com/withmsit/"><img src="image/main/set5.png" alt=""></a></li>
+                        <li><a href="https://www.facebook.com/withmsit" target="_blank"><img src="image/main/face.png" alt=""></a></li>
+                        <li><a href="https://blog.naver.com/with_msip"  target="_blank"><img src="image/main/set2.png" alt=""></a></li>
+                        <li><a href="https://www.youtube.com/c/withmsit" target="_blank"><img src="image/main/set3.png" alt=""></a></li>
+                        <li><a href="https://twitter.com/withmsit/" target="_blank"><img src="image/main/set4.png" alt=""></a></li>
+                        <li><a href="https://www.instagram.com/withmsit/" target="_blank"><img src="image/main/set5.png" alt=""></a></li>
                     </ul>
                 </div>
             <div class="top_image">
@@ -357,7 +344,7 @@ border-top:2px solid #333; display:none;  }
                     <li class="item3"><a href="#">개인정보 처리방침</a></li>
                     <li class="item4"><a href="#">저작권정책</a></li>
                     <li class="item5"><a href="#">RSS이용안내</a></li>
-                    <li class="item6"><a href="#">찾아오시는길</a></li>
+                    <li class="item6"><a href="menu4-1.html">찾아오시는길</a></li>
                 </ul>
             </nav>
         </div>
