--- a/b2/menu2-1.html
+++ b/b2/menu2-1.html
@@ -113,12 +113,8 @@ td.col7 {height: 30px;}
                                <li><a href="https://www.instagram.com/withmsit/"><img src="image/main/set5.png" alt=""></a></li>
                            </ul>
                        </div>
+</header>
 
-                       <!--              <div class="navigation">
-    <span class="nav_01"><a href="index.html">HOME</a></span>
-    <span class="nav_02"><a href="menu2-1.html">업무안내</a></span>
-    <span class="nav_03"><a href="menu2-1.html">R&D</a></span>
-</div>-->
                       
     <div class="navigation" style="top: 20px;position: relative;">
         <span class="nav_01"><a href="index.html">HOME</a></span>
